Added Some SEOs

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GeeksforGeeks Student Chapter RSCOE</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+
+  <meta name="google-site-verification" content="google1f148e971eb20aa4.html" />
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "GeeksforGeeks Student Chapter - RSCOE",
+  "url": "https://gfgrscoe.vercel.app",
+  "logo": "https://gfgrscoe.vercel.app/logo.png",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "email": "gfg.rscoe@gmail.com",
+    "contactType": "info"
+  }]
+}
+</script>
+
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GFG RSCOE | GeeksforGeeks Student Chapter</title>
+  <meta name="description"
+    content="Official GeeksforGeeks Student Chapter of RSCOE Tathawade. Events, workshops, coding resources and more." />
+  <meta name="keywords" content="GFG RSCOE, GeeksforGeeks RSCOE, RSCOE Coding Club, RSCOE GFG, GFGRSCOE">
+  <meta name="author" content="GFG RSCOE Team" />
+  <meta property="og:title" content="GFG RSCOE Student Chapter" />
+  <meta property="og:description" content="Join RSCOE’s official GeeksforGeeks Student Chapter." />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:url" content="https://gfgrscoe.vercel.app/" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
