--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <meta name="google-site-verification" content="google1f148e971eb20aa4.html" />
+  <meta name="google-site-verification" content="bd10k072TVK7o6RbB8dRsdoTnbpAgkSOmT08TOupzpA" />
 
   <script type="application/ld+json">
 {
