Fix Favicon Bug 2

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,7 +21,10 @@
 </script>
 
   <meta charset="UTF-8" />
-  <link rel="icon" href="/logo.png" type="image/png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GFG RSCOE | GeeksforGeeks Student Chapter</title>
   <meta name="description"
@@ -29,7 +32,7 @@
   <meta name="keywords" content="GFG RSCOE, GeeksforGeeks RSCOE, RSCOE Coding Club, RSCOE GFG, GFGRSCOE">
   <meta name="author" content="GFG RSCOE Team" />
   <meta property="og:title" content="GFG RSCOE Student Chapter" />
-  <meta property="og:description" content="Join RSCOE’s official GeeksforGeeks Student Chapter." />
+  <meta property="og:description" content="Join RSCOE's official GeeksforGeeks Student Chapter." />
   <meta property="og:image" content="/logo.png" />
   <meta property="og:url" content="https://gfgrscoe.vercel.app/" />
   <meta name="twitter:card" content="summary_large_image" />
