--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,9 +21,11 @@
 </script>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
-  <link rel="apple-touch-icon" href="/logo.png" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GFG RSCOE | GeeksforGeeks Student Chapter</title>
@@ -33,7 +35,7 @@
   <meta name="author" content="GFG RSCOE Team" />
   <meta property="og:title" content="GFG RSCOE Student Chapter" />
   <meta property="og:description" content="Join RSCOE's official GeeksforGeeks Student Chapter." />
-  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image" content="https://gfgrscoe.vercel.app/logo.png" />
   <meta property="og:url" content="https://gfgrscoe.vercel.app/" />
   <meta name="twitter:card" content="summary_large_image" />
 
